--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ body {
 }
 
 header {
+    position: fixed;
+    top: 0;
     width: 100%;
     height: 70px;
     background-color: #fff;
@@ -21,9 +23,16 @@ header {
 
 
 }
+
+  
 .line-container {
-    width: 20px;
-    height: 10px;
+    width: 30px;
+    height: 30px;
+    margin-left: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
  
 }
 .line{
@@ -32,6 +41,51 @@ header {
     margin-bottom: 4px;
     background-color: black;
 }
+.list {
+    position: fixed;
+    top: 7.5%;
+    background-color: white;
+    list-style: none;
+    display: none;
+    margin-left: 10px;
+    width: 200px;
+    box-shadow: 2px -2px 5px 2px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    z-index: 3;
+  
+
+}
+.arrow {
+    position: relative;
+    top: -10px;
+    left: 5px;
+    width: 20px;
+    height: 20px;
+    background-color: white;
+    transform: rotate(45deg);
+    box-shadow: -2px -2px 5px 2px rgba(0, 0, 0, 0.05);
+    border-top: 4px solid white;
+    border-right: 4px solid white;
+    z-index: 1;
+  }
+  .list ul{
+    margin-top: -13px;
+  }
+
+.list ul li {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    margin-left: -30px;
+    margin-bottom: 1em;
+ 
+}
+.list ul li div{
+    width: 30px;
+    height: 30px;
+}
+
+
 .jumia-logo {
     width: 100px;
     height: 50px;
@@ -52,23 +106,24 @@ form{
   width: 30%;
   font-size: 20px;
 }
+#sec-logo{
+    display: none;
+}
 
 #bod {
     display: flex;
     flex-direction: column;
     gap: 0;
+    margin-top: 70px;
 }
 
 #Data{
     display: flex;
     flex-direction: column;
-    box-sizing: border-box;
-
-   
+    box-sizing: border-box;  
 }
 
 .img-container {
-    height: 550px;
     background-color: #fff;
     margin-top: 10px;
 }
@@ -150,7 +205,7 @@ form{
 }
 
 .title > p span{
-    color: blue;
+    color: #4365b5;
 }
 
 .sales-container{
@@ -216,6 +271,7 @@ form{
     gap: 5px;
     padding-left: 10px;
     height: 30px;
+    font-size: 13px;
 
 }
 
@@ -257,7 +313,7 @@ form{
 
 .share p {
     font-size: 12px;
-    color: blue;
+    color: #4365b5;
 }
 
 .share-logo {
@@ -284,23 +340,26 @@ form{
     box-sizing: border-box;
 }
 .btn button {
-    width: 50px;
+    width: 15%;
     height: 50px;
     color: rgb(255, 123, 0);
     border: 1px solid rgb(255, 123, 0);
     border-radius: 3px ;
     background-color: white;
+    cursor: pointer;
 }
 
 .btn div {
     display: flex;
     align-items: center;
-    width: 290px;
+    width: 81%;
     background-color: rgb(255, 123, 0);
+    box-shadow: 5px 5px 5px 3px rgba(0, 0, 0, 0.1);
     color: white;
     border-radius: 3px ;
     padding-left: 5px;
     gap: 100px;
+    cursor: pointer;
 }
 
 .btn div p {
@@ -327,7 +386,7 @@ form{
 
 .second-promo div span {
     font-size: 10px;
-    color: blue;
+    color: #4365b5;
 }
 
 .discription {
@@ -349,23 +408,22 @@ form{
     background-color: white;
     display: flex;
     flex-direction: column;
-    height: 300px;
+
 }
 
 .Product h1 {
     font-size: 20px;
     margin-left: 10px;
-  
 }
 
 .others {
     display: flex;
     width: 300px;
     height: 200px;
-    padding: 0;
-    margin-top: 0;
+    padding: 10px;
     margin: auto;
-    box-shadow: -2px 2px 3px 3px rgba(0, 0, 0, 0.1);
+    box-shadow: -2px 3px 3px 3px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
 }
 .others div:nth-child(1){
     width: 10%;
@@ -377,6 +435,7 @@ form{
 }
 .other-products {
     padding-top: -10px;
+
 }
 .other-products p:nth-child(1){
     margin-top: -3px;
@@ -392,4 +451,236 @@ form{
     border-radius: 4px;
     width: 100px;
     height: 30px;
+    cursor: pointer;
+}
+
+
+@media screen and (min-width: 768px) {
+    #imgElement{
+        max-width: 500px;
+        max-height: 600px;
+    }
+    .red-container{
+        width: 98.5%;
+        max-width: 100%;
+    }
+    .others {
+        margin: auto auto auto 20px;
+        width: 80%;
+    }
+
+    .logos{
+        width: 15%;
+    }
+    .list {
+        top: 6%;
+    }
+    
+}
+
+@media screen and (min-width: 1200px) {
+    .list {
+        top: 7%;
+    }
+    
+    form{
+        display: flex;
+        flex-wrap: nowrap;
+        width: 65%;
+        height: 30px;
+        gap: 10px;
+        align-items: center;
+    }
+    form i{
+        position: relative;
+        left: 4%;
+        font-weight: 900;
+        color: #71747b;
+    }
+    input{
+        width: 90%;
+        height:30px;
+        text-indent: 30px;
+        border: 1px solid #71747b;
+    }
+    input:focus{
+        outline: none;
+
+    }
+    input:hover{
+        outline: none;
+    }
+    form button {
+        width: 10%;
+        background-color: rgb(255, 123, 0);
+        height: 33px;
+        color: white;
+        border: none;
+        border-radius: 3px;
+        font-size: 15px;
+        font-weight: lighter;
+    }
+    #bod {
+        display: flex;
+        flex-direction: row;
+        margin-bottom: 20px;
+    }
+    .Data{
+        display: flex;
+        width: 100%;
+        background-color: none;
+        border-radius: 10px;
+      
+    }
+    .store{
+        border-radius: 10px;
+    }
+    #Data{
+        width: 75%;
+        margin: 50px 10px auto 20px; 
+        height: 100%;
+        border-radius: 10px;
+        background-color: white;
+   
+    
+        
+    }
+    .title{
+        width: 62%;
+        background-color: none;
+        border-radius: 10px;
+    }
+    .img-container {
+        background-color: #fff;
+        margin-top: 0px;
+        border-radius: 10px;
+    }
+    .logos{
+        display: none;
+    }
+    #sec-logo{
+        display: flex;
+        width: 25%;
+        padding-right: 10px;
+    }
+    #sec-logo div{
+        display: flex;
+        align-items: center;
+        gap: 5px;
+    }
+    #sec-logo div span{
+        font-size: 15px;
+    }
+
+    .Lin{
+        display: none;
+    }
+
+    .Product{
+        width: 22%;
+        margin-top: 50px;
+        border-radius: 10px;
+    }
+    #title {
+        font-size: 30px;
+    }
+    .title > p {
+        margin-top: -20px;
+        font-size: 15px;
+    }
+    .sales-container{
+        margin-left: 20px;
+        width: 95%;
+    }
+    .bar-container {
+        width: 85%;
+    }
+    #shipping{
+        font-size: 15px;
+        margin-left: 20px;
+    }
+    .share{
+        margin-left: 20px;
+    }
+    .first-promo{
+        display: none;
+    }
+    .btn button {
+        display: none;
+    }
+    .btn div {
+        width: 98%;
+        height: 50px;
+        margin-top: -10px;
+    }
+    .btn div:nth-child(2){
+        font-size: 25px;
+    }
+    .share-logo{
+        display: none;
+    }
+    .btn div:nth-child(2) p {
+        font-size: 15px;
+        margin-left: 20%;
+    }
+    .second-promo > div{
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+    .second-promo > p {
+        font-size: 15px;
+    }
+    .second-promo div span{
+        font-size: 13px;
+    }
+    .discription{
+        padding-top: 70px;
+        border-radius: 10px;
+    }
+    .discription h3 {
+        font-size: 20px;
+        font-weight: 650;
+    }
+    #description{
+        font-size: 15px;
+        line-height: 20px;
+    }
+    .report {
+        background-color: white;
+        padding-top: 100px;
+        color: #4365b5;
+        padding-left: 10px;
+        border-radius: 10px;
+    }
+    .others {
+        height: 150px;
+        box-shadow: 0px 2px 1px 1px rgba(0, 0, 0, 0.1);
+    }
+    .small-cicle{
+        width: 5px;
+        height: 5px;
+        border-radius: 50%;
+        border: 2px solid white;
+        background-color: rgb(255, 123, 0);
+        position: relative;
+        top: -20%;
+        left: 15%;
+    }
+    #small-cicle{
+        width: 10px;
+        height: 10px;
+        border-radius: 50%;
+        border: 2px solid white;
+        background-color: rgb(255, 123, 0);
+        position: relative;
+        top: -20%;
+        left: 40%;
+        font-size: 10px;
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+    }
 }
