--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ header {
     justify-content: flex-start;
     align-items: center;
     gap: 30px;
+    z-index: 4;
 
 
 }
@@ -173,6 +174,9 @@ form{
     font-size: 10px;
     color: white;
     margin-left: 20px;
+}
+.store i {
+    /* display: none ; */
 }
 
 .store p:nth-child(1){
@@ -524,12 +528,14 @@ form{
         display: flex;
         flex-direction: row;
         margin-bottom: 20px;
+        height: 120hv;
     }
     .Data{
         display: flex;
         width: 100%;
         background-color: none;
         border-radius: 10px;
+        height: 100%;
       
     }
     .store{
@@ -580,6 +586,10 @@ form{
         width: 22%;
         margin-top: 50px;
         border-radius: 10px;
+        height: 975px;
+        overflow-y: scroll;
+        scrollbar-width: none;
+
     }
     #title {
         font-size: 30px;
@@ -654,8 +664,9 @@ form{
         border-radius: 10px;
     }
     .others {
-        height: 150px;
+        height: 170px;
         box-shadow: 0px 2px 1px 1px rgba(0, 0, 0, 0.1);
+        gap: 10px;
     }
     .small-cicle{
         width: 5px;
@@ -683,4 +694,11 @@ form{
         justify-content: center;
 
     }
+    .store i {
+        display: unset ;
+        color: rgb(255, 123, 0);
+        font-size: 25px;
+        margin: auto 20px auto auto;
+    }
+
 }
